Mon Apr 26 08:29:58 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/SSL/SSL_Asynch_Stream_Test.cpp:
        * tests/SSL/Bug_2912_Regression_Test.cpp:
        * tests/Proactor_UDP_Test.cpp:
        * tests/MT_Reference_Counted_Event_Handler_Test.cpp:
        * tests/Proactor_Test_IPV6.cpp:
        * tests/Bug_2740_Regression_Test.cpp:
        * tests/Dev_Poll_Reactor_Test.cpp:
        * tests/Proactor_Test.cpp:
        * tests/TP_Reactor_Test.cpp:
          All these tests need to block SIGPIPE signal. POSIX defines that
          newly created threads must inherit signal mask from the creating
          thread. The later doesn't happen at least on Solaris 10. With this
          change each new thread in the above tests will block SIGPIPE signal
          individually.

Thu Apr 22 07:51:42 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * Release:
        * bin/make_release.py:
          Updated because of rename

        * debian:
        * debianbuild:
          Renamed debianbuild to debianbuild

Wed Apr 21 13:36:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Connection/blocking/SPIPE-connector.cpp:
          Use Reactor instead of Proactor, thanks to Dave <dwh0403 at 163 dot com>
          for reporting this

Tue Apr 20 13:02:46 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op.h:
          Fix redefinition warning

Mon Apr 19 18:17:30 UTC 2010 UTC 2010 Chad Beaulac <chad@objectivesolutions.com

        * ace/Service_Repository.cpp
          Modified ASR::fini to print debug info for empty
          service entries and handle empty service entries.
          This fixes the ASR remove functionality that was
          one of the reasons SC_Server was crashing at shutdown.

        * examples/ASX/CCM_App/SC_Server.cpp
          Removing signal handler before main exit to present SEGV

        * tests/run_test.lst